# A-GL-Engine

./: CMakeLists.txt  README.md
include/: camera.hpp  file.hpp  mesh.hpp  shader.hpp
include/glad/: glad.h
shaders/: default.vert
src/: camera.cpp  file.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp
